--- a/index.css
+++ b/index.css
@@ -4,6 +4,35 @@ html {
 
 body {
   margin: 5px 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: 100vh;
+  /* background: green; */
+  border-radius: 50%;
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7ef8c9+0,04ff24+100 */
+  background: #fff;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #fff 0%, #7ef8c9 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #fff 0%, #7ef8c9 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #fff 0%, #7ef8c9 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7ef8c9', endColorstr='#04ff24', GradientType=0);
+  /* IE6-9 */
+}
+
+path {
+  stroke-dasharray: 2950;
+  animation: dash 1s ease forwards, shadowset 1s ease forwards;
+  stroke-width: 100px;
+  stroke: white;
+}
+
+svg {
+  animation: turn-around 1s ease-in forwards reverse;
 }
 
 .logo {
@@ -23,18 +52,7 @@ body {
   /* IE6-9 */
   width: 30vw;
   height: 30vw;
-  animation: shadowset 1s ease forwards;
-}
-
-svg {
-  animation: turn-around 1s ease-in forwards reverse;
-}
-
-path {
-  stroke-dasharray: 2950;
-  animation: dash 1s ease forwards, shadowset 1s ease forwards;
-  stroke-width: 100px;
-  stroke: white;
+  animation: shadowset 1s ease forwards, drop .5s ease-out forwards;
 }
 
 @keyframes soft-fade-in {
@@ -47,21 +65,18 @@ path {
 }
 
 @keyframes shadowset {
-  0% {
-    filter: drop-shadow(5px 5px 15px rgba(1,1,1,.2));
+  /* 0% {
+    filter: drop-shadow(5px 5px 15px rgba(1, 1, 1, .2));
   }
-
   25% {
-    filter: drop-shadow(25px 25px 25px  rgba(1,1,1,.2));
+    filter: drop-shadow(25px 25px 25px rgba(1, 1, 1, .2));
   }
-
   75% {
-    filter: drop-shadow(4px 4px 3px  rgba(1,1,1,.2));
+    filter: drop-shadow(4px 4px 3px rgba(1, 1, 1, .2));
   }
-
   100% {
     filter: none;
-  }
+  } */
 }
 
 @keyframes dash {
@@ -70,6 +85,16 @@ path {
   }
   100% {
     stroke-dashoffset: 0;
+  }
+}
+
+@keyframes drop {
+  0% {
+    transform: translateY(-50px);
+  }
+
+  100% {
+    transform: translateY(0px);
   }
 }
 
