slowing down the animation, splitting up different paths

--- a/index.css
+++ b/index.css
@@ -26,13 +26,33 @@ body {
 
 path {
   stroke-dasharray: 2950;
-  animation: dash 1s ease forwards, shadowset 1s ease forwards;
+  stroke-dashoffset: 2950;
   stroke-width: 100px;
   stroke: white;
 }
 
+.big {
+  animation: dash 5s ease-in forwards;
+}
+
+.i.i-left {
+  animation: dash-reverse 3s ease-out forwards;
+}
+
+.i.i-right {
+  animation: dash-reverse 3s ease-out 1s forwards;
+}
+
+.dot.dot-right {
+  animation: dash 1s linear 4s forwards;
+}
+
+.dot.dot-left {
+  animation: dash 1s linear 4.7s forwards;
+}
+
 svg {
-  animation: turn-around 1s ease-in forwards reverse;
+  animation: turn-around 5s ease-in forwards reverse;
 }
 
 .logo {
@@ -52,7 +72,7 @@ svg {
   /* IE6-9 */
   width: 30vw;
   height: 30vw;
-  animation: shadowset 1s ease forwards, drop .5s ease-out forwards;
+  animation: shadowset 5s ease forwards, drop 10s ease-out forwards, soft-fade-in 2s ease-out forwards;
 }
 
 @keyframes soft-fade-in {
@@ -88,11 +108,19 @@ svg {
   }
 }
 
+@keyframes dash-reverse {
+  0% {
+    stroke-dashoffset: -2950;
+  }
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+
 @keyframes drop {
   0% {
     transform: translateY(-50px);
   }
-
   100% {
     transform: translateY(0px);
   }
