--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ svg {
   /* IE6-9 */
   width: 20em;
   height: 20em;
-  animation: shadowset 5s ease forwards, drop 10s ease-out forwards, soft-fade-in 2s ease-out forwards;
+  animation: shadowset 5s ease forwards, drop 10s ease-out forwards;
 }
 
 @keyframes soft-fade-in {
