--- a/logo.css
+++ b/logo.css
@@ -6,11 +6,23 @@
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7ef8c9+0,04ff24+100 */
   background: #7ef8c9;
   /* Old browsers */
-  background: -moz-linear-gradient(top, #7ef8c9 0%, #04ff24 100%);
+  background: -moz-linear-gradient(
+    top,
+    var(--color-main-light) 0%,
+    var(--color-main-dark) 100%
+  );
   /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #7ef8c9 0%, #04ff24 100%);
+  background: -webkit-linear-gradient(
+    top,
+    var(--color-main-light) 0%,
+    var(--color-main-dark) 100%
+  );
   /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #7ef8c9 0%, #04ff24 100%);
+  background: linear-gradient(
+    to bottom,
+    var(--color-main-light) 0%,
+    var(--color-main-dark) 100%
+  );
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7ef8c9', endColorstr='#04ff24', GradientType=0);
   /* IE6-9 */
@@ -54,7 +66,7 @@
 .logo__wrapper {
   width: 15em;
   height: 15em;
-  content: '&nbsp;'
+  content: "&nbsp;";
 }
 
 .logo__replay-message {
